--- a/src/app.html
+++ b/src/app.html
@@ -5,8 +5,12 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
+		  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
 	</head>
 	<body data-sveltekit-preload-data="hover">
+		    <script>
+		    pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.worker.min.js';
+			</script>
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
